# SmarTraffic

./: .gitignore  README.md  config.py  conftest.py  dashboard.py  pyproject.toml  requirements.txt  train.py
data/: README.md  download_data.py
notebooks/: 01_Graph_Construction.ipynb  02_Spatial_Analysis.ipynb  03_Training_Evaluation.ipynb
src/: __init__.py  build_graph.py  dataset.py  model.py  utils.py
tests/: test_core.py
